[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tdvms"
authors = [
    {name = "Rıdvan Örsvuran", email = "rorsvuran@mines.edu"},
]
description = "A client for downloading continuous seismic data from AFAD TDVMS"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["seismology", "seismic data", "tdvms"]
license = {text = "GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "requests",
    "obspy",
    "matplotlib",
    "cartopy",
    "pyyaml"
]
dynamic = ["version"]

[tool.setuptools]
packages = ["tdvms"]

[project.scripts]
tdvms_download = "tdvms.download:download"

[tool.setuptools.dynamic]
version = {attr = "tdvms.VERSION"}
